SQL/ODBC: fix reading REAL values

Reading out data of type REAL was broken since
b211148e4b4167483e1a78a45ae8fef97e5a4f2d due to the fact that
QMetaType::Float was not handled within QODBCResult::data().
It was also not possible to read out the correct data with the help of
QSql::HighPrecision due to a wrong length given to qGetStringData().

Pick-to: 6.9 6.8
Fixes: QTBUG-138642
Task-number: QTBUG-8963
Change-Id: I90a003a0b1625f37931468c3994418a1dc3a03c4
Reviewed-by: Andy Shaw <andy.shaw@qt.io>
(cherry picked from commit 7f24d895214a806270acb83c2227e3fc0380d978)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>